fixed mobile view contact form from overlapping footer. Took out the height class

--- a/public_html/style/style.css
+++ b/public_html/style/style.css
@@ -51,7 +51,7 @@ body{font-family: 'Arvo', serif;}
 	background: url("../images/h2o.jpg")center/cover no-repeat fixed;
 }
 .height{
-	min-height: 80vh;
+	min-height: 100vh;
 
 }
 
